--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-screens": "^3.0.0",
     "react-native-simple-toast": "^1.1.3",
     "react-native-vector-icons": "^8.1.0",
+    "react-navigation": "^4.4.4",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
