--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-modal-datetime-picker": "^9.2.1",
     "react-native-push-notification": "^7.3.1",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^2.1.0",
     "react-native-root-view-background-color": "^1.0.2",
     "react-native-safe-area-context": "^3.2.0",
